[package]
name = "namada_wrapper"
version = "1.7.0"
edition = "2021"

[lib]
name = "namada_wrapper"
crate-type = ["cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3" 
namada_core = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_sdk = { git = "https://github.com/anoma/namada.git",tag = "libs-v0.150.1",features = ["std", "masp"] }
namada_governance = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_token = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_io   = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
namada_shielded_token = { git = "https://github.com/anoma/namada", tag = "libs-v0.150.1" }
masp_primitives = { git = "https://github.com/anoma/masp"}
sysinfo = "0.30"

jemallocator = "0.5" 

rand_core = "0.6" 

anyhow = "1.0"                                  

once_cell = "1"
base64 = "0.21"

tendermint = "0.40.3"
tendermint-config = "0.40.3"
tendermint-rpc = { version = "0.40.3", features = ["http-client"] }
tendermint-proto = "0.40.3"
tokio = { version = "1.8", features = ["full"] }
toml = "0.8"
hex = "0.4"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
kdam = "0.5.2"
rand = "0.8"


[target.aarch64-apple-ios]
rustflags = [
  "-Cembed-bitcode=yes"
]

[profile.dev]
panic = "unwind"
debug = true
[profile.release]
panic = "unwind"
debug = true
lto = "thin"


